[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/QuitPrompt.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="Theme" id=2]
Button/styles/normal = SubResource( 1 )

[node name="QuitPrompt" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -135.0
margin_right = 240.0
margin_bottom = 135.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -137.0
margin_right = 242.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 484.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 216 )
text = "Вы уверены,
что хотите выйти?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 484.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 54 )

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 54.0
rect_min_size = Vector2( 240, 0 )
focus_neighbour_left = NodePath("../ReturnButton")
theme = SubResource( 2 )
text = "Выйти"

[node name="ReturnButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 54.0
rect_min_size = Vector2( 240, 0 )
focus_neighbour_right = NodePath("../QuitButton")
text = "Остаться"

[connection signal="about_to_show" from="." to="." method="_on_QuitPrompt_about_to_show"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
